@@ -1,0 +1,28 @@
+# Generated by Django 3.2.15 on 2022-09-20 13:00
+
+from django.conf import settings
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
+        ("wagtailcore", "0076_modellogentry_revision"),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name="revision",
+            name="user",
+            field=models.ForeignKey(
+                blank=True,
+                null=True,
+                on_delete=django.db.models.deletion.SET_NULL,
+                related_name="wagtail_revisions",
+                to=settings.AUTH_USER_MODEL,
+                verbose_name="user",
+            ),
+        ),
+    ]
