@@ -20,6 +20,7 @@ Changelog
  * Fix: Prevent 'Delete' link on page edit view from redirecting back to the deleted page (LB (Ben) Johnston)
  * Fix: Prevent JS error on images index view when collections dropdown is omitted (Tidiane Dia)
  * Fix: Prevent "Entries per page" dropdown on images index view from reverting to 10 (Tidiane Dia)
+ * Fix: Set related_name on user revision relation to avoid conflict with django-reversion (Matt Westcott)
 
 
 4.0.1 (05.09.2022)
